third_party/kiva-ep/vendor/mathgl-2.4.4/include/mgl2/data_cf.h

/// Find root for nonlinear equation
mreal MGL_EXPORT mgl_find_root(mreal (*func)(mreal val, void *par), mreal ini, void *par);
/// Find roots for set of nonlinear equations defined by function
bool MGL_EXPORT mgl_find_roots(size_t n, void (*func)(const mreal *x, mreal *f, void *par), mreal *x0, void *par);