third_party/kiva-ep/vendor/mathgl-2.4.4/include/mgl2/mgl_pas.pas

/// Read data from tab-separated text files with auto determining size which filenames are satisfied to template (like "t_*.dat")
function  mgl_datac_read_all(dat: HADT;const templ: PChar;as_slice: integer): integer; cdecl; external libmgl;
/// Save whole data array (for ns=-1) or only ns-th slice to text file
procedure  mgl_datac_save(const dat: HMDT;const fname: PChar;ns: integer); cdecl; external libmgl;
/// Read data array from HDF file (parse HDF4 and HDF5 files)
function  mgl_datac_read_hdf(d: HADT;const fname: PChar;const data: PChar): integer; cdecl; external libmgl;
/// Save data to HDF file
procedure  mgl_datac_save_hdf(const d: HMDT;const fname: PChar;const data: PChar;rewrite: integer); cdecl; external libmgl;
/// Create or recreate the array with specified size and fill it by zero
procedure  mgl_datac_create(dat: HADT;nx: integer;ny: integer;nz: integer); cdecl; external libmgl;
/// Transpose dimensions of the data (generalization of Transpose)
procedure  mgl_datac_transpose(dat: HADT;const dim: PChar); cdecl; external libmgl;
/// Get sub-array of the data with given fixed indexes
function  mgl_datac_subdata(const dat: HMDT;xx: integer;yy: integer;zz: integer): HADT; cdecl; external libmgl;
/// Get sub-array of the data with given fixed indexes (like indirect access)
function  mgl_datac_subdata_ext(const dat: HMDT;const xx: HMDT;const yy: HMDT;const zz: HMDT): HADT; cdecl; external libmgl;
/// Get column (or slice) of the data filled by formulas of named columns
function  mgl_datac_column(const dat: HMDT;const eq: PChar): HADT; cdecl; external libmgl;
/// Get trace of the data array
function  mgl_datac_trace(const d: HMDT): HADT; cdecl; external libmgl;
/// Resize the data to new sizes
function  mgl_datac_resize(const dat: HMDT;mx: integer;my: integer;mz: integer): HADT; cdecl; external libmgl;
/// Resize the data to new sizes of box [x1,x2]*[y1,y2]*[z1,z2]
function  mgl_datac_resize_box(const dat: HMDT;mx: integer;my: integer;mz: integer;x1: mreal;x2: mreal;y1: mreal;y2: mreal;z1: mreal;z2: mreal): HADT; cdecl; external libmgl;
/// Get momentum (1D-array) of data along direction 'dir'. String looks like "x1" for median in x-direction, "x2" for width in x-dir and so on.
function  mgl_datac_momentum(const dat: HMDT;dir: char;const how: PChar): HADT; cdecl; external libmgl;
/// Get array which values is result of interpolation this for coordinates from other arrays
function  mgl_datac_evaluate(const dat: HMDT;const idat: HMDT;const jdat: HMDT;const kdat: HMDT;norm: integer): HADT; cdecl; external libmgl;
/// Get array which is result of summation in given direction or directions
function  mgl_datac_sum(const dat: HMDT;const dir: PChar): HADT; cdecl; external libmgl;
/// Get the data which is direct multiplication (like, d[i,j] = this[i]*a[j] and so on)
function  mgl_datac_combine(const dat1: HMDT;const dat2: HMDT): HADT; cdecl; external libmgl;
/// Set names for columns (slices)
procedure  mgl_datac_set_id(d: HADT;const id: PChar); cdecl; external libmgl;
/// Equidistantly fill the data to range [x1,x2] in direction dir
procedure  mgl_datac_fill(dat: HADT;x1: dual;x2: dual;dir: char); cdecl; external libmgl;
/// Modify the data by specified formula assuming x,y,z in range [r1,r2]
procedure  mgl_datac_fill_eq(gr: HMGL;dat: HADT;const eq: PChar;const vdat: HMDT;const wdat: HMDT;const opt: PChar); cdecl; external libmgl;
/// Modify the data by specified formula
procedure  mgl_datac_modify(dat: HADT;const eq: PChar;dim: integer); cdecl; external libmgl;
/// Modify the data by specified formula
procedure  mgl_datac_modify_vw(dat: HADT;const eq: PChar;const vdat: HMDT;const wdat: HMDT); cdecl; external libmgl;
/// Put value to data element(s)
procedure  mgl_datac_put_val(dat: HADT;val: dual;i: integer;j: integer;k: integer); cdecl; external libmgl;
/// Put array to data element(s)
procedure  mgl_datac_put_dat(dat: HADT;const val: HMDT;i: integer;j: integer;k: integer); cdecl; external libmgl;
/// Reduce size of the data
procedure  mgl_datac_squeeze(dat: HADT;rx: integer;ry: integer;rz: integer;smooth: integer); cdecl; external libmgl;
/// Extend data dimensions
procedure  mgl_datac_extend(dat: HADT;n1: integer;n2: integer); cdecl; external libmgl;
/// Insert data rows/columns/slices
procedure  mgl_datac_insert(dat: HADT;dir: char;at: integer;num: integer); cdecl; external libmgl;
/// Delete data rows/columns/slices
procedure  mgl_datac_delete(dat: HADT;dir: char;at: integer;num: integer); cdecl; external libmgl;
/// Joind another data array
procedure  mgl_datac_join(dat: HADT;const d: HMDT); cdecl; external libmgl;
/// Smooth the data on specified direction or directions
procedure  mgl_datac_smooth(d: HADT;const dirs: PChar;delta: mreal); cdecl; external libmgl;
/// Cumulative summation the data in given direction or directions
procedure  mgl_datac_cumsum(dat: HADT;const dir: PChar); cdecl; external libmgl;
/// Integrate (cumulative summation) the data in given direction or directions
procedure  mgl_datac_integral(dat: HADT;const dir: PChar); cdecl; external libmgl;
/// Differentiate the data in given direction or directions
procedure  mgl_datac_diff(dat: HADT;const dir: PChar); cdecl; external libmgl;
/// Double-differentiate (like Laplace operator) the data in given direction
procedure  mgl_datac_diff2(dat: HADT;const dir: PChar); cdecl; external libmgl;
/// Swap left and right part of the data in given direction (useful for Fourier spectrum)
procedure  mgl_datac_swap(dat: HADT;const dir: PChar); cdecl; external libmgl;
/// Roll data along direction dir by num slices
procedure  mgl_datac_roll(dat: HADT;dir: char;num: integer); cdecl; external libmgl;
/// Mirror the data in given direction (useful for Fourier spectrum)
procedure  mgl_datac_mirror(dat: HADT;const dir: PChar); cdecl; external libmgl;
/// Crop the data
procedure  mgl_datac_crop(dat: HADT;n1: integer;n2: integer;dir: char); cdecl; external libmgl;
/// Apply Hankel transform
procedure  mgl_datac_hankel(dat: HADT;const dir: PChar); cdecl; external libmgl;
/// Apply Fourier transform
procedure  mgl_datac_fft(dat: HADT;const dir: PChar); cdecl; external libmgl;
/// Find correlation between 2 data arrays
function  mgl_datac_correl(const dat1: HMDT;const dat2: HMDT;const dir: PChar): HADT; cdecl; external libmgl;
/// Calculate one step of diffraction by finite-difference method with parameter q
procedure  mgl_datac_diffr(dat: HADT;const how: PChar;q: mreal); cdecl; external libmgl;
function  mgl_datac_real(const dat: HMDT): HMDT; cdecl; external libmgl;
function  mgl_datac_imag(const dat: HMDT): HMDT; cdecl; external libmgl;
function  mgl_datac_abs(const dat: HMDT): HMDT; cdecl; external libmgl;
function  mgl_datac_arg(const dat: HMDT): HMDT; cdecl; external libmgl;
/// Interpolate by linear function the data to given point x=[0...nx-1], y=[0...ny-1], z=[0...nz-1]
function  mgl_datac_linear(const d: HMDT;x: mreal;y: mreal;z: mreal): dual; cdecl; external libmgl;
/// Interpolate by linear function the data and return its derivatives at given point x=[0...nx-1], y=[0...ny-1], z=[0...nz-1]
function  mgl_datac_linear_ext(const d: HMDT;x: mreal;y: mreal;z: mreal;dx: Pdual;dy: Pdual;dz: Pdual): dual; cdecl; external libmgl;
/// Interpolate by cubic spline the data to given point x=[0...nx-1], y=[0...ny-1], z=[0...nz-1]
function  mgl_datac_spline(const dat: HMDT;x: mreal;y: mreal;z: mreal): dual; cdecl; external libmgl;
/// Interpolate by cubic spline the data and return its derivatives at given point x=[0...nx-1], y=[0...ny-1], z=[0...nz-1]
function  mgl_datac_spline_ext(const dat: HMDT;x: mreal;y: mreal;z: mreal;dx: Pdual;dy: Pdual;dz: Pdual): dual; cdecl; external libmgl;
/// Prepare coefficients for global spline interpolation
function  mgl_gsplinec_init(const x: HMDT;const v: HMDT): HADT; cdecl; external libmgl;
/// Evaluate global spline (and its derivatives d1, d2 if not NULL) using prepared coefficients \a coef
function  mgl_gsplinec(const coef: HMDT;dx: mreal;d1: Pdual;d2: Pdual): dual; cdecl; external libmgl;
//-----------------------------------------------------------------------------
/// Create HAEX object for expression evaluating
function  mgl_create_cexpr(const expr: PChar): HAEX; cdecl; external libmgl;
/// Delete HAEX object
procedure  mgl_delete_cexpr(ex: HAEX); cdecl; external libmgl;
/// Return value of expression for given x,y,z variables
function  mgl_cexpr_eval(ex: HAEX;x: dual;y: dual;z: dual): dual; cdecl; external libmgl;
/// Return value of expression for given variables
function  mgl_cexpr_eval_v(ex: HAEX;vars: Pdual): dual; cdecl; external libmgl;
//-----------------------------------------------------------------------------
{== ../../include/mgl2/cont.h ==}
//-----------------------------------------------------------------------------
/// Print text along the curve in parametric form {x,y,z}
procedure  mgl_text_xyz(gr: HMGL;const x: HMDT;const y: HMDT;const z: HMDT;const text: PChar;const font: PChar;const opt: PChar); cdecl; external libmgl;
procedure  mgl_textw_xyz(gr: HMGL;const x: HMDT;const y: HMDT;const z: HMDT;const text: PWideChar;const font: PChar;const opt: PChar); cdecl; external libmgl;
/// Print text along the curve in parametric form {x,y}
procedure  mgl_text_xy(gr: HMGL;const x: HMDT;const y: HMDT;const text: PChar;const font: PChar;const opt: PChar); cdecl; external libmgl;
procedure  mgl_textw_xy(gr: HMGL;const x: HMDT;const y: HMDT;const text: PWideChar;const font: PChar;const opt: PChar); cdecl; external libmgl;
/// Print text along the curve
procedure  mgl_text_y(gr: HMGL;const y: HMDT;const text: PChar;const font: PChar;const opt: PChar); cdecl; external libmgl;
procedure  mgl_textw_y(gr: HMGL;const y: HMDT;const text: PWideChar;const font: PChar;const opt: PChar); cdecl; external libmgl;
procedure  mgl_cont_gen(gr: HMGL;val: double;const a: HMDT;const x: HMDT;const y: HMDT;const z: HMDT;const stl: PChar); cdecl; external libmgl;
procedure  mgl_contf_gen(gr: HMGL;v1: double;v2: double;const a: HMDT;const x: HMDT;const y: HMDT;const z: HMDT;const stl: PChar); cdecl; external libmgl;
//void MGL_EXPORT mgl_contv_gen(HMGL gr, double v1, double v2, HCDT a, HCDT x, HCDT y, HCDT z, const char *stl)
//void MGL_EXPORT mgl_axial_gen(HMGL gr, double v1, double v2, HCDT a, HCDT x, HCDT y, HCDT z, const char *stl)
/// Draw manual contour lines for 2d data specified parametrically
procedure  mgl_cont_xy_val(gr: HMGL;const v: HMDT;const x: HMDT;const y: HMDT;const z: HMDT;const sch: PChar;const opt: PChar); cdecl; external libmgl;
/// Draw manual contour lines for 2d data
procedure  mgl_cont_val(gr: HMGL;const v: HMDT;const z: HMDT;const sch: PChar;const opt: PChar); cdecl; external libmgl;
/// Draw contour lines for 2d data specified parametrically
procedure  mgl_cont_xy(gr: HMGL;const x: HMDT;const y: HMDT;const z: HMDT;const sch: PChar;const opt: PChar); cdecl; external libmgl;
/// Draw contour lines for 2d data
procedure  mgl_cont(gr: HMGL;const z: HMDT;const sch: PChar;const opt: PChar); cdecl; external libmgl;
/// Draw manual solid contours for 2d data specified parametrically
procedure  mgl_contf_xy_val(gr: HMGL;const v: HMDT;const x: HMDT;const y: HMDT;const z: HMDT;const sch: PChar;const opt: PChar); cdecl; external libmgl;
/// Draw manual solid contours for 2d data
procedure  mgl_contf_val(gr: HMGL;const v: HMDT;const z: HMDT;const sch: PChar;const opt: PChar); cdecl; external libmgl;
/// Draw solid contours for 2d data specified parametrically
procedure  mgl_contf_xy(gr: HMGL;const x: HMDT;const y: HMDT;const z: HMDT;const sch: PChar;const opt: PChar); cdecl; external libmgl;
/// Draw solid contours for 2d data
procedure  mgl_contf(gr: HMGL;const z: HMDT;const sch: PChar;const opt: PChar); cdecl; external libmgl;
/// Draw manual solid contours for 2d data specified parametrically with manual colors
procedure  mgl_contd_xy_val(gr: HMGL;const v: HMDT;const x: HMDT;const y: HMDT;const z: HMDT;const sch: PChar;const opt: PChar); cdecl; external libmgl;
